unpackaged/main/default/objects/SBQQ__QuoteLine__c/fields/Monthly_Damage_Waiver_Amount__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Damage_Waiver_Amount__c</fullName>
    <description>Monthly Damage Waiver is calculated at 14% of the Monthly Amount for the quote.</description>
    <formula>IF( Monthly_Amount__c = 0, null,  Monthly_Amount__c  * 0.14)</formula>
    <inlineHelpText>Monthly Damage Waiver is calculated at 14% of the Monthly Amount for the quote.</inlineHelpText>
    <label>Monthly Damage Waiver Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>