unpackaged/main/default/objects/SBQQ__QuoteLine__c/fields/Monthly_Insurance_Value__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Insurance_Value__c</fullName>
    <description>Pulls the monthly insurance amount from the product type</description>
    <formula>Unit__r.Product__r.Insurance_Monthly__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Pulls the monthly insurance amount from the product type</inlineHelpText>
    <label>Monthly Insurance Value</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>