unpackaged/main/default/objects/SBQQ__QuoteLine__c/fields/Monthly_PPF__c.field-meta.xml
<CustomField>
    <fullName>Monthly_PPF__c</fullName>
    <formula>AND(   SBQQ__ProductName__c = 'Personal Property Fee' , OR(NOT(ISBLANK(Monthly_Amount_Calc__c)) , Monthly_Amount_Calc__c != 0))</formula>
    <label>Monthly PPF</label>
    <type>Checkbox</type>
</CustomField>