unpackaged/main/default/objects/SBQQ__QuoteLine__c/fields/Monthly_Unit_Amount__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Unit_Amount__c</fullName>
    <description>Monthly Amount per unit (Monthly amount divided by Quantity)</description>
    <formula>Monthly_Amount__c /  SBQQ__Quantity__c</formula>
    <inlineHelpText>Monthly Amount per unit (Monthly amount divided by Quantity)</inlineHelpText>
    <label>Monthly Unit Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>