unpackaged/main/default/objects/SBQQ__QuoteLine__c/fields/Monthly_VAPS__c.field-meta.xml
<CustomField>
    <fullName>Monthly_VAPS__c</fullName>
    <formula>AND( SBQQ__ProductFamily__c = 'VAPS' ,  OR(NOT(ISBLANK(Monthly_Amount_Calc__c)) , Monthly_Amount_Calc__c != 0),NOT(Subleased__c))</formula>
    <label>Monthly VAPS</label>
    <type>Checkbox</type>
</CustomField>