unpackaged/main/default/objects/SBQQ__QuoteLine__c/fields/NBV__c.field-meta.xml
<CustomField>
    <fullName>NBV__c</fullName>
    <description>Net Book Value of the unit selected for this quote line</description>
    <formula>IF( NBV_Override__c &gt; 0, NBV_Override__c , Unit__r.NBV__c )</formula>
    <inlineHelpText>Net Book Value of the unit selected for this quote line</inlineHelpText>
    <label>NBV</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>