unpackaged/main/default/objects/SBQQ__QuoteLine__c/fields/NBV_Currency__c.field-meta.xml
<CustomField>
    <fullName>NBV_Currency__c</fullName>
    <description>Currency version of NBV. Needed for roll-up summary filter to calculate Total NBV of Sale and Carry On and Total Fixed Asset Contract Value.</description>
    <inlineHelpText>Currency version of NBV. Needed for roll-up summary filter to calculate Total NBV of Sale and Carry On and Total Fixed Asset Contract Value.</inlineHelpText>
    <label>NBV (Currency)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>