unpackaged/main/default/objects/SBQQ__QuoteLine__c/fields/NBV_Override__c.field-meta.xml
<CustomField>
    <fullName>NBV_Override__c</fullName>
    <description>Used to let the sales rep overwrite the replacement value</description>
    <inlineHelpText>Used to let the sales rep overwrite the replacement value</inlineHelpText>
    <label>NBV Override</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>