unpackaged/main/default/objects/SBQQ__QuoteLine__c/fields/Net_Total_excl_Optional__c.field-meta.xml
<CustomField>
    <fullName>Net_Total_excl_Optional__c</fullName>
    <description>Net Total of quote line unless Optional, then = $0</description>
    <formula>IF(  SBQQ__Optional__c = TRUE, 0,  SBQQ__NetTotal__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Net Total of quote line unless Optional, then = $0</inlineHelpText>
    <label>Net Total excl Optional</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>