unpackaged/main/default/objects/SBQQ__QuoteLine__c/fields/NetTotal_OneTime__c.field-meta.xml
<CustomField>
    <fullName>NetTotal_OneTime__c</fullName>
    <description>Shows the Quote Line Net Total if the Product Type is Operations &amp; is not a subscription product</description>
    <formula>IF( AND( Product_Type_Test__c  = "Operations",   ISBLANK(TEXT( SBQQ__SubscriptionPricing__c ))),  SBQQ__NetTotal__c , NULL)</formula>
    <inlineHelpText>Shows the Quote Line Net Total if the Product Type is Operations &amp; is not a subscription product</inlineHelpText>
    <label>Net Total OneTime</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>