unpackaged/main/default/objects/SBQQ__QuoteLine__c/fields/NetTotal_Plus_10Percent__c.field-meta.xml
<CustomField>
    <fullName>NetTotal_Plus_10Percent__c</fullName>
    <formula>SBQQ__NetTotal__c * 1.10</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>NetTotal_Plus_10Percent</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>