unpackaged/main/default/objects/SBQQ__QuoteLine__c/fields/New_Build_Amount__c.field-meta.xml
<CustomField>
    <fullName>New_Build_Amount__c</fullName>
    <description>New Build (CAPEX) Amount</description>
    <formula>IF(ISPICKVAL( Cost_Type__c, "CAPEX - New Build"), Total_Cost__c , NULL)</formula>
    <inlineHelpText>New Build (CAPEX) Amount</inlineHelpText>
    <label>New Build Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>