unpackaged/main/default/objects/SBQQ__QuoteLine__c/fields/New_Cost_Override__c.field-meta.xml
<CustomField>
    <fullName>New_Cost_Override__c</fullName>
    <label>New Unit Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>