unpackaged/main/default/objects/SBQQ__QuoteLine__c/fields/New_Infleet_Factor_3__c.field-meta.xml
<CustomField>
    <fullName>New_Infleet_Factor_3__c</fullName>
    <formula>IF( Shell__c,
  IF(New_Unit_Involved__c ,
   IF(ISBLANK(SBQQ__Quote__r.Override_New_Factor_3__c),
      CASE(  SBQQ__Quote__r.Term_3__c  ,
1,0.046,
2,0.045,
3,0.044,
4,0.043,
5,0.042,
6,0.041,
7,0.04,
8,0.039,
9,0.038,
10,0.037,
11,0.036,
12,0.035,
13,0.034,
14,0.033,
15,0.032,
16,0.031,
17,0.03,
18,0.029,
19,0.028,
20,0.027,
21,0.026,
22,0.025,
23,0.024,
24,0.023,
25,0.0228402777777778,
26,0.0226805555555556,
27,0.0225208333333333,
28,0.0223611111111111,
29,0.0222013888888889,
30,0.0220416666666667,
31,0.0218819444444444,
32,0.0217222222222222,
33,0.0215625,
34,0.0214027777777778,
35,0.0212430555555555,
36,0.022,
37,0.0219166666666667,
38,0.0218333333333333,
39,0.02175,
40,0.0216666666666667,
41,0.0215833333333333,
42,0.0215,
43,0.0214166666666667,
44,0.0213333333333333,
45,0.02125,
46,0.0211666666666667,
47,0.0210833333333333,
48,0.021,
49,0.0209166666666667,
50,0.0208333333333333,
51,0.02075,
52,0.0206666666666667,
53,0.0205833333333333,
54,0.0205,
55,0.0204166666666667,
56,0.0203333333333333,
57,0.02025,
58,0.0201666666666667,
59,0.0200833333333333,
60,0.02,
0
),SBQQ__Quote__r.Override_New_Factor_3__c),
SBQQ__Quote__r.Infleet_Factor_3__c
),NULL
)</formula>
    <label>New/Infleet Factor 3</label>
    <precision>18</precision>
    <scale>9</scale>
    <type>Number</type>
</CustomField>