unpackaged/main/default/objects/SBQQ__QuoteLine__c/fields/New_Infleet_Factor_Selected__c.field-meta.xml
<CustomField>
    <fullName>New_Infleet_Factor_Selected__c</fullName>
    <formula>CASE(SBQQ__Quote__r.To_be_entered_into_pipeline__c ,
     'Term 1', New_Infleet_Factor_1__c,
     'Term 2', New_Infleet_Factor_2__c,
     'Term 3', New_Infleet_Factor_3__c,
     'Term 4', New_Infleet_Factor_4__c,
     'Term 5', New_Infleet_Factor_5__c,
     NULL
)</formula>
    <label>New/Infleet Factor Selected</label>
    <precision>18</precision>
    <scale>9</scale>
    <type>Number</type>
</CustomField>