unpackaged/main/default/objects/SBQQ__QuoteLine__c/fields/New_Manufacture_Sale_for_Item_Mapping__c.field-meta.xml
<CustomField>
    <fullName>New_Manufacture_Sale_for_Item_Mapping__c</fullName>
    <formula>AND( ISPICKVAL( SBQQ__Quote__r.Transaction_Type__c ,'Sale') ,
	OR(
		AND(
			OR( 
				SBQQ__Quote__r.SBQQ__Opportunity2__r.Customer_Category_for_Item_Map__c  = 'External',
				SBQQ__Quote__r.SBQQ__Opportunity2__r.Customer_Category_for_Item_Map__c = 'Third Party Partnership'
			),
			OR( Unit__r.Name = 'New Unit', Unit__r.WIP_Asset__c )
		),
		AND(
			OR( 
				SBQQ__Quote__r.SBQQ__Opportunity2__r.Customer_Category_for_Item_Map__c  = 'External',
				SBQQ__Quote__r.SBQQ__Opportunity2__r.Customer_Category_for_Item_Map__c = 'Third Party Partnership',
				SBQQ__Quote__r.SBQQ__Opportunity2__r.Customer_Category_for_Item_Map__c = 'Intercompany',
				SBQQ__Quote__r.SBQQ__Opportunity2__r.Customer_Category_for_Item_Map__c = 'Intra-Group'
			),
			Unit__r.Name = 'New Carry On'
		)
	)
		
)</formula>
    <label>New Manufacture - Sale for Item Mapping</label>
    <type>Checkbox</type>
</CustomField>