unpackaged/main/default/objects/SBQQ__QuoteLine__c/fields/New_Unit_Involved__c.field-meta.xml
<CustomField>
    <fullName>New_Unit_Involved__c</fullName>
    <defaultValue>false</defaultValue>
    <label>New Unit Involved</label>
    <type>Checkbox</type>
</CustomField>