unpackaged/main/default/objects/SBQQ__QuoteLine__c/fields/NS_Activity_Code__c.field-meta.xml
<CustomField>
    <fullName>NS_Activity_Code__c</fullName>
    <formula>IF( NOT(External_Quote_Line__c) ,
  IF( Transaction_Type__c ='Rental', SBQQ__Product__r.NS_Activity_Code_Rental__c, 
    IF( ISBLANK(SBQQ__Product__r.NS_Activity_Code_Sale__c),
       SBQQ__Product__r.NS_Activity_Code_Rental__c,
       SBQQ__Product__r.NS_Activity_Code_Sale__c   
    )
  ),null
)</formula>
    <label>NS Activity Code</label>
    <type>Text</type>
</CustomField>