unpackaged/main/default/objects/SBQQ__QuoteLine__c/fields/NS_Asset_ID__c.field-meta.xml
<CustomField>
    <fullName>NS_Asset_ID__c</fullName>
    <formula>IF(Unit__r.WIP_Asset__c,'',Unit__r.NS_External_ID__c)</formula>
    <label>NS Asset ID</label>
    <type>Text</type>
</CustomField>