unpackaged/main/default/objects/SBQQ__QuoteLine__c/fields/NS_Contract_ID__c.field-meta.xml
<CustomField>
    <fullName>NS_Contract_ID__c</fullName>
    <formula>IF( Primary_Quote__c , SBQQ__Quote__r.SBQQ__Opportunity2__r.NS_Rental_Contract_ID__c ,NULL)</formula>
    <label>NS Contract ID</label>
    <type>Text</type>
</CustomField>