unpackaged/main/default/objects/SBQQ__QuoteLine__c/fields/NS_Field_Record_ID__c.field-meta.xml
<CustomField>
    <fullName>NS_Field_Record_ID__c</fullName>
    <label>NS Field Record ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>