unpackaged/main/default/objects/SBQQ__QuoteLine__c/fields/NS_Linked_Rental_Item_ID__c.field-meta.xml
<CustomField>
    <fullName>NS_Linked_Rental_Item_ID__c</fullName>
    <label>NS Linked Rental Item ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>