unpackaged/main/default/objects/SBQQ__QuoteLine__c/fields/NS_Package_ID__c.field-meta.xml
<CustomField>
    <fullName>NS_Package_ID__c</fullName>
    <formula>SBQQ__RequiredBy__r.SBQQ__Product__r.NS_Package_ID__c</formula>
    <label>NS Package ID</label>
    <type>Text</type>
</CustomField>