unpackaged/main/default/objects/SBQQ__QuoteLine__c/fields/NS_Project_ID__c.field-meta.xml
<CustomField>
    <fullName>NS_Project_ID__c</fullName>
    <formula>IF( SBQQ__Quote__r.SBQQ__Primary__c ,SBQQ__Quote__r.SBQQ__Opportunity2__r.NS_Project_ID__c,NULL)</formula>
    <label>NS Project ID</label>
    <type>Text</type>
</CustomField>