unpackaged/main/default/objects/SBQQ__QuoteLine__c/fields/Number_of_Beds__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Beds__c</fullName>
    <description>Product's # of beds</description>
    <inlineHelpText>Product's # of beds</inlineHelpText>
    <label># of Beds</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>