unpackaged/main/default/objects/SBQQ__QuoteLine__c/fields/Number_of_Units_in_Complex__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Units_in_Complex__c</fullName>
    <label>Number of Units in Complex</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>