unpackaged/main/default/objects/SBQQ__QuoteLine__c/fields/NumberofFloors__c.field-meta.xml
<CustomField>
    <fullName>NumberofFloors__c</fullName>
    <label>Number of Floors</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>