unpackaged/main/default/objects/SBQQ__QuoteLine__c/fields/Optional_Text__c.field-meta.xml
<CustomField>
    <fullName>Optional_Text__c</fullName>
    <description>Displays "Optional" text if the Optional checkbox is selected</description>
    <formula>IF( SBQQ__Optional__c, "Optional", "")</formula>
    <inlineHelpText>Displays "Optional" text if the Optional checkbox is selected</inlineHelpText>
    <label>Optional Text</label>
    <type>Text</type>
</CustomField>