unpackaged/main/default/objects/SBQQ__QuoteLine__c/fields/Original_Capital_Cost__c.field-meta.xml
<CustomField>
    <fullName>Original_Capital_Cost__c</fullName>
    <description>Cost of the unit in our Fleet used in a rental to calculate the payback</description>
    <formula>Unit__r.Cost__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Cost of the unit in our Fleet used in a rental to calculate the payback</inlineHelpText>
    <label>Original Capital Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>