unpackaged/main/default/objects/SBQQ__QuoteLine__c/fields/Original_Quote_Line_Name__c.field-meta.xml
<CustomField>
    <fullName>Original_Quote_Line_Name__c</fullName>
    <label>Original Quote Line Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>