unpackaged/main/default/objects/SBQQ__QuoteLine__c/fields/Payback__c.field-meta.xml
<CustomField>
    <fullName>Payback__c</fullName>
    <description>Number of months to payback (Cost divided by monthly amount = # of months)</description>
    <formula>IF(Monthly_Amount__c = 0, NULL, CASE(Trans_Category__c, 
     "Rental", Total_Cost__c ,
     "Carry On", Total_Cost__c  ,
 0) / Monthly_Amount__c)</formula>
    <inlineHelpText>Number of months to payback (Cost divided by monthly amount = # of months)</inlineHelpText>
    <label>Payback (Months)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>