unpackaged/main/default/objects/SBQQ__QuoteLine__c/fields/Price_Lookup_Check__c.field-meta.xml
<CustomField>
    <fullName>Price_Lookup_Check__c</fullName>
    <description>Validation field used to compare Price List lookup from List Unit Price, which may be edited by user.</description>
    <inlineHelpText>Price from Price List, before edits</inlineHelpText>
    <label>Price Lookup Check</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>