unpackaged/main/default/objects/SBQQ__QuoteLine__c/fields/Price_Lookup_Check_B__c.field-meta.xml
<CustomField>
    <fullName>Price_Lookup_Check_B__c</fullName>
    <description>Price Lookup Check contains nulls. Price Lookup Check B copies Price Lookup Check and populates nulls as zeros</description>
    <formula>(IF(ISBLANK( Price_Lookup_Check__c ), 0, Price_Lookup_Check__c ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Copy of Price Lookup Check where null is converted to 0</inlineHelpText>
    <label>Price Lookup Check B</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>