unpackaged/main/default/objects/SBQQ__QuoteLine__c/fields/Price_Rule_Testing__c.field-meta.xml
<CustomField>
    <fullName>Price_Rule_Testing__c</fullName>
    <label>Price Rule Testing</label>
    <length>255</length>
    <type>Text</type>
</CustomField>