unpackaged/main/default/objects/SBQQ__QuoteLine__c/fields/Primary_Quote__c.field-meta.xml
<CustomField>
    <fullName>Primary_Quote__c</fullName>
    <formula>SBQQ__Quote__r.SBQQ__Primary__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Primary Quote</label>
    <type>Checkbox</type>
</CustomField>