unpackaged/main/default/objects/SBQQ__QuoteLine__c/fields/Product_Code_Price_Rule__c.field-meta.xml
<CustomField>
    <fullName>Product_Code_Price_Rule__c</fullName>
    <label>Product Code(Price Rule)</label>
    <length>25</length>
    <type>Text</type>
</CustomField>