unpackaged/main/default/objects/SBQQ__QuoteLine__c/fields/Product_Description_French__c.field-meta.xml
<CustomField>
    <fullName>Product_Description_French__c</fullName>
    <label>Product Description(French)</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>