unpackaged/main/default/objects/SBQQ__QuoteLine__c/fields/Product_Family_Product_Name__c.field-meta.xml
<CustomField>
    <fullName>Product_Family_Product_Name__c</fullName>
    <formula>SBQQ__ProductFamily__c &amp;"-"&amp; SBQQ__ProductName__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product Family + Product Name</label>
    <type>Text</type>
</CustomField>