unpackaged/main/default/objects/SBQQ__QuoteLine__c/fields/Product_ID__c.field-meta.xml
<CustomField>
    <fullName>Product_ID__c</fullName>
    <formula>IF(AND( SBQQ__Quote__r.Major_Project__c = TRUE , OR(SBQQ__Product__r.ProductCode ='UnC',SBQQ__Product__r.ProductCode ='LnC')),CASESAFEID(SBQQ__Product__r.Id)&amp;"-M",
   IF(AND( SBQQ__Quote__r.Major_Project__c = FALSE , OR(SBQQ__Product__r.ProductCode ='UnC',SBQQ__Product__r.ProductCode ='LnC')),CASESAFEID(SBQQ__Product__r.Id)&amp;"-T",
        CASESAFEID(SBQQ__Product__r.Id)
  )
)</formula>
    <label>Product ID</label>
    <type>Text</type>
</CustomField>