unpackaged/main/default/objects/SBQQ__QuoteLine__c/fields/Product_Option_Group__c.field-meta.xml
<CustomField>
    <fullName>Product_Option_Group__c</fullName>
    <label>Product Option Group</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Bank</fullName>
            </value>
            <value>
                <fullName>Classroom</fullName>
            </value>
            <value>
                <fullName>Container</fullName>
            </value>
            <value>
                <fullName>Lavatory</fullName>
            </value>
            <value>
                <fullName>Tank</fullName>
            </value>
            <value>
                <fullName>Office</fullName>
            </value>
            <value>
                <fullName>Dorms</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>