unpackaged/main/default/objects/SBQQ__QuoteLine__c/fields/Product_Option_Width__c.field-meta.xml
<CustomField>
    <fullName>Product_Option_Width__c</fullName>
    <label>Product Option Width</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>