unpackaged/main/default/objects/SBQQ__QuoteLine__c/fields/Product_Sq_Ft__c.field-meta.xml
<CustomField>
    <fullName>Product_Sq_Ft__c</fullName>
    <formula>IF(OR( ISBLANK(Custom_Length__c),ISBLANK(Custom_Width__c)),
     SBQQ__Product__r.Product_Length__c *  SBQQ__Product__r.Product_Width__c,
          Custom_Length__c*Custom_Width__c
)</formula>
    <label>Product Sq Ft</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>