unpackaged/main/default/objects/SBQQ__QuoteLine__c/fields/Product_Subscription_Frequency__c.field-meta.xml
<CustomField>
    <fullName>Product_Subscription_Frequency__c</fullName>
    <description>Reads the Subscription Frequency from the product.  Used in Price rules to determine when to calculate daily rates</description>
    <formula>TEXT(SBQQ__Product__r.Subscription_Frequency__c)</formula>
    <inlineHelpText>Reads the Subscription Frequency from the product.  Used in Price rules to determine when to calculate daily rates</inlineHelpText>
    <label>Product Subscription Frequency</label>
    <type>Text</type>
</CustomField>