unpackaged/main/default/objects/SBQQ__QuoteLine__c/fields/Product_Transaction_Category__c.field-meta.xml
<CustomField>
    <fullName>Product_Transaction_Category__c</fullName>
    <description>Reads the Transaction Category from the Product onto the Quote Line</description>
    <formula>TEXT(SBQQ__Product__r.Transaction_Category__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product Transaction Category</label>
    <type>Text</type>
</CustomField>