unpackaged/main/default/objects/SBQQ__QuoteLine__c/fields/Product_Type__c.field-meta.xml
<CustomField>
    <fullName>Product_Type__c</fullName>
    <description>Using Process builder to pull product type from Product.  If it is Sale/Rental, look to the Quote/Quote Group transaction type</description>
    <inlineHelpText>Using Process builder to pull product type from Product.  If it is Sale/Rental, look to the Quote/Quote Group transaction type</inlineHelpText>
    <label>Product Type</label>
    <length>30</length>
    <type>Text</type>
</CustomField>