unpackaged/main/default/objects/SBQQ__QuoteLine__c/fields/Product_Type_Test__c.field-meta.xml
<CustomField>
    <fullName>Product_Type_Test__c</fullName>
    <description>Directly reads the Product Type from the parent Product - No Translation</description>
    <formula>TEXT(SBQQ__Product__r.Product_Type__c)</formula>
    <inlineHelpText>Directly reads the Product Type from the parent Product - No Translation</inlineHelpText>
    <label>Product Type Test</label>
    <type>Text</type>
</CustomField>