unpackaged/main/default/objects/SBQQ__QuoteLine__c/fields/Profit_Production__c.field-meta.xml
<CustomField>
    <fullName>Profit_Production__c</fullName>
    <formula>( Monthly_Amount_Calc__c  * Subscription_Term_Quote__c *0.8) +  Margin_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Profit Production</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>