unpackaged/main/default/objects/SBQQ__QuoteLine__c/fields/Quote_ID__c.field-meta.xml
<CustomField>
    <fullName>Quote_ID__c</fullName>
    <formula>SBQQ__Quote__r.Name</formula>
    <label>Quote ID</label>
    <type>Text</type>
</CustomField>