unpackaged/main/default/objects/SBQQ__QuoteLine__c/fields/Quote_Record_Type__c.field-meta.xml
<CustomField>
    <fullName>Quote_Record_Type__c</fullName>
    <formula>SBQQ__Quote__r.RecordType.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Quote Record Type</label>
    <type>Text</type>
</CustomField>