unpackaged/main/default/objects/SBQQ__QuoteLine__c/fields/Ready_for_Renewal__c.field-meta.xml
<CustomField>
    <fullName>Ready_for_Renewal__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Ready for Renewal</label>
    <type>Checkbox</type>
</CustomField>