unpackaged/main/default/objects/SBQQ__QuoteLine__c/fields/Refurb_Amount__c.field-meta.xml
<CustomField>
    <fullName>Refurb_Amount__c</fullName>
    <description>Refurb (CAPEX) Amount</description>
    <formula>IF(ISPICKVAL(Cost_Type__c, "CAPEX - Refurb"), Total_Cost__c , NULL)</formula>
    <inlineHelpText>Refurb (CAPEX) Amount</inlineHelpText>
    <label>Refurb Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>